syntax = "proto3";

import "google/protobuf/empty.proto";
import "protobuf/request.proto";
package komputer;

enum Privileges {
  AUDIO = 0;
  JOKE = 1;
  FEATURE_MANAGEMENT = 2;
}

message AdminRegistration {
  string name = 1;
  oneof auth_method {
    string password = 2;
    string public_key = 3;
  }
  string guildID = 4;
  repeated Privileges privileges = 5;
}

message AdminData {
  bytes object_id = 1;
  string name = 2;
  string guildID = 3;
  repeated Privileges privileges = 4;
}

service AdminService {
  rpc List(Pagination) returns (stream AdminData);
  rpc New(AdminRegistration) returns (ObjectID);
  rpc Update(AdminRegistration) returns (AdminData);
  rpc Remove(ObjectID) returns (google.protobuf.Empty);
}